# justuslethen

./: README.md
chat-rooms/: .gitignore  README.md  app.py  database.db  pyproject.toml
chat-rooms/chat-app/public/: index.html
chat-rooms/chat-app/src/: chat.css  index.css  index.js  room.js
chat-rooms/chat-app/src/components/: Header.jsx  RoomContainer.jsx
chat-rooms/modules/: check_for_swear_words.py  database.py  rooms.py  users.py
chat-rooms/new-app/: package-lock.json  package.json
chat-rooms/new-app/backend/: Dockerfile  go.mod
chat-rooms/new-app/backend/web/: index.html
chat-rooms/new-app/chatrooms/src/: App.tsx  i18n.ts  index.css  main.tsx
chat-rooms/new-app/frontend/chatrooms/: package-lock.json  package.json
chat-rooms/old-app/chat-app/: package-lock.json
chat-rooms/old-app/modules/: check_for_swear_words.py  rooms.py  users.py
events/: .gitignore  README.md  app.py  package-lock.json  pyproject.toml
events/app/: package-lock.json  package.json
events/app/src/: App.js  index.css
events/app/src/pages/: Create.js  (+3 more)
events/modules/: create_event.py  database.py  edit_event.py  get_event.py  permission.py
scharade-game/: .gitignore  README.md  app.py  database.db  print_users_for_words.py  pyproject.toml
scharade-game/game-app/: package-lock.json  package.json
scharade-game/game-app/public/: index.html
scharade-game/game-app/src/: design.css  design1.css  design2.css  design3.css  index.js  socketHandlers.js
scharade-game/modules/database/: database.py
scharade-game/modules/lobby/: game.py  lobby.py
scharade-game/modules/user/: connect.py  userdata.py
time-track/backend/tests/: pyproject.toml
(+223 files in other folders)
