[tool.poetry]
name = "chat-rooms"
version = "0.1.0"
description = ""
authors = ["justuslethen <138368372+justuslethen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-socketio = "^5.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
